--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.8.0",
     "jit-grunt": "^0.10.0",
-    "pixrem": "^3.0.0",
+    "sass-rem": "^1.2.0",
     "postcss-em-media-query": "^1.0.1",
     "time-grunt": "^1.1.0"
   },
