--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jit-grunt": "^0.10.0",
     "sass-rem": "^1.2.0",
     "postcss-em-media-query": "^1.0.1",
-    "time-grunt": "^1.1.0"
+    "time-grunt": "^1.1.0",
+    "grunt-criticalcss": "^1.0.2"
+
   },
   "dependencies": {
     "jquery": "^2.2.0",
