--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.8.0",
     "jit-grunt": "^0.10.0",
     "sass-rem": "^1.2.0",
     "postcss-em-media-query": "^1.0.1",
     "time-grunt": "^1.1.0",
-    "grunt-criticalcss": "^1.0.2"
+    "grunt-criticalcss": "^2.0.1"
 
   },
   "dependencies": {
-    "jquery": "^2.2.0",
-    "bootstrap-sass": "^3.0.0"
+    "jquery": "^3.0.0",
+    "bootstrap": "4.0.0-alpha.4"
   }
 }
