--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "sass-rem": "^1.2.0",
     "postcss-em-media-query": "^1.0.1",
     "time-grunt": "^1.1.0",
-    "grunt-criticalcss": "^2.0.1"
+    "grunt-criticalcss": "^2.0.1",
+    "babelify": "^7.3.0",
+    "babel-preset-es2015": "^6.14.0"
+
 
   },
   "dependencies": {
