--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     }
   ],
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^7.1.6",
     "debowerify": "^1.5.0",
     "grunt": "^1.0.1",
     "grunt-browser-sync": "^2.2.0",
-    "grunt-browserify": "^5.0.0",
+    "grunt-browserify": "^5.2.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.1.0",
-    "grunt-contrib-uglify": "^2.3.0",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-uglify": "^3.2.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-postcss": "^0.8.0",
+    "grunt-postcss": "^0.9.0",
     "jit-grunt": "^0.10.0",
-    "sass-rem": "^1.2.3",
+    "sass-rem": "^2.0.0",
     "postcss-em-media-query": "^2.0.0",
     "time-grunt": "^1.4.0",
     "grunt-criticalcss": "^2.1.0",
-    "babelify": "^7.3.0",
+    "babelify": "^8.0.0",
     "babel-preset-es2015": "^6.24.1"
 
 
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "bootstrap": "4.0.0-alpha.6"
+    "bootstrap": "4.0.0-beta.2"
   }
 }
